tests/paczka1/small_fuzzy/83777506.err
Error in line 3: DdSUpqmoad A441 58,1
Error in line 4: DdSUpqmoad A157 0,7
Error in line 5: DdSUpqmoad A280 53,3
